overlays/uksouth-retail/olympus/boreas/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: retailer.${cluster_name}.${cluster_location}.bink.sh
  namespace: default
spec:
  ingressClassName: traefik
  rules:
    - host: retailer.${cluster_name}.${cluster_location}.bink.sh
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: boreas-api
                port:
                  number: 80
  tls:
    - hosts:
        - retailer.${cluster_name}.${cluster_location}.bink.sh
